--- a/vacation.css
+++ b/vacation.css
@@ -27,16 +27,110 @@ body, html {
   transform: translate(-50%, -50%);
   color: white;
 }
-
-footer {
-    text-align: center;
-    padding: 1px;
-    background-color: DarkSalmon;
-    color: white;
-  }
-
-
-
-  #expandme :hover{
+ #expandme :hover{
     color:#ea1c2c;
   }
+
+  *{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+body{
+   font-family:sans-serif;
+   line-height:1.5;
+    
+    
+}
+
+nav{
+    height:10vh;
+    position: sticky;
+    margin-top: 15px;
+
+}
+
+.nav-links{
+    display:flex;
+    list-style:none;
+    width: 100%;
+    background:coral;
+    height:150% ;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: auto;
+    margin-top:30px;
+    
+} 
+
+.nav-links li a{
+    color: rgb(131, 25, 25);
+    text-decoration: none;
+    font-size:30px;
+    
+}
+
+@media screen and (max-width:768px){
+    .nav-links{
+      flex-direction: column;
+      justify-content: right;
+    }
+
+}
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+
+}
+.container{
+    max-width:1170px;
+    background-color: red;
+    margin:auto;
+}
+
+
+.row{
+    display:flex;
+    flex-wrap:wrap;
+}
+ul{
+    list-style:none;
+}
+.footer{
+    background-color:#24262b;
+    padding:40px 0;
+    justify-content:end;
+}
+.footer-col{
+    width:25%;
+    padding:0 15px;
+    
+
+}
+.footer-col h4{
+    font-size: 20px;
+    color:#ffffff;
+   margin-bottom: 30px;
+   font-weight: 500px;
+   position: relative;
+
+}
+
+/* reponsive */
+@media(max-width:768px){
+    .footer-col{
+        width:50%;
+        padding:0 15px;
+        margin-bottom:30px;
+    }
+}
+@media(max-width:574px){
+    .footer-col{
+        width:50%;
+        padding:100px;
+       
+    }
+}
