--- a/about.css
+++ b/about.css
@@ -2,24 +2,52 @@
   font-family:comic sans MS;
    height:100px;
    justify-content: end;
-   border:2px solid gold
+   border:2px solid
 }
 
 
 .click{
-  border:3px solid green;
+  border:3px solid;
   padding:10px;
   margin-right:10px;
   border-radius:15px;
+  color:black;
+  
 }
 
 .click:hover{
-  background-color:aqua;
+  background-color:red;
 }
 
 .text{
-  border:3px solid aqua;
+  border:3px solid;
   padding:10px;
   margin-right:10px;
   border-radius:15px;
 }
+
+.container{
+  margin-top:30px;
+  background-color: bisque;
+ 
+  
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap:10px;
+  column-gap: 10px;
+  width:50px;
+  border-radius:50%;
+  
+}
+
+.grid-picture {
+  width:250px;
+  margin: 10px;
+  padding: 0px;
+  margin-top:30px;
+  
+}
+
