--- a/about.css
+++ b/about.css
@@ -1,5 +1,8 @@
-.navbar{
+body{
   font-family:comic sans MS;
+}
+
+.navbar{
    height:100px;
    justify-content: end;
    border:2px solid
@@ -28,14 +31,14 @@
 
 .container{
   margin-top:30px;
-  background-color: bisque;
+  background-color: aquamarine;
  
   
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   row-gap:10px;
   column-gap: 10px;
   width:50px;
@@ -51,3 +54,42 @@
   
 }
 
+.footer{
+  background-color:#24262b;
+  padding:40px 0;
+  justify-content:end;
+}
+.footer-col{
+  width:25%;
+  padding:0 15px;
+  
+
+}
+.footer-col h4{
+  font-size: 20px;
+  color:#ffffff;
+ margin-bottom: 30px;
+ font-weight: 500px;
+ position: relative;
+
+}
+
+/* reponsive */
+@media(max-width:768px){
+  .footer-col{
+      width:50%;
+      padding:0 15px;
+      margin-bottom:30px;
+  }
+}
+@media(max-width:574px){
+  .footer-col{
+      width:50%;
+      padding:100px;
+     
+  }
+}
+
+.carousel-inner{
+  margin-bottom:20px;
+}
