--- a/about.css
+++ b/about.css
@@ -31,7 +31,8 @@ body{
 
 .container{
   margin-top:30px;
-  background-color: aquamarine;
+  background-color:firebrick;
+  border-radius:8%;
  
   
 }
@@ -92,4 +93,38 @@ body{
 
 .carousel-inner{
   margin-bottom:20px;
+}
+
+
+@keyframes discount{
+  100%,
+  0%{
+    color:rgb(255,0,0);
+  }
+  8% {
+    color:rgb(255, 127,0);
+  }
+  16%{
+    color:rgb(255 ,255,0);
+  }
+  25%{
+    color:rgb(127,255,0)
+  }
+  33%{
+    color:rgb(0,255,0)
+  }
+  41%{
+    color:rgb(0,255,127)
+  }
+  50%{
+    color:rgb(0,255,255)
+  }
+  58%{
+    color:rgb(0,127,255)
+  }
+
+}
+.discount{
+  animation:discount .5s infinte linear;
+  font-size:30px;
 }
