--- a/about.css
+++ b/about.css
@@ -29,10 +29,12 @@ body{
   border-radius:15px;
 }
 
-.container{
+p{
   margin-top:30px;
   background-color:firebrick;
   border-radius:8%;
+  
+  align-items:center;
  
   
 }
@@ -44,6 +46,7 @@ body{
   column-gap: 10px;
   width:50px;
   border-radius:50%;
+  
   
 }
 
@@ -111,10 +114,10 @@ body{
     color:rgb(127,255,0)
   }
   33%{
-    color:rgb(0,255,0)
+    color:rgb(0,255,186)
   }
   41%{
-    color:rgb(0,255,127)
+    color:rgb(255, 0, 100)
   }
   50%{
     color:rgb(0,255,255)
@@ -125,6 +128,9 @@ body{
 
 }
 .discount{
-  animation:discount .5s infinte linear;
-  font-size:30px;
+  animation:discount .5s infinite linear;
+  font-size:50px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
