--- a/contact.css
+++ b/contact.css
@@ -1,19 +1,27 @@
+.container{
+    background-color: aqua;
+     align-items: center;
+}
+
+
 form {
     width: 400px;
     margin:20px auto;
-
+    
+    
+   
 }
-
 label{
-    display:block;
+    display:flex;
     margin-bottom: 5px;
+    
 }
 
 input,textarea{
-    width:100%;
+    width:50%;
     padding:10px;
     margin-bottom:10px;
-
+   
 }
 
 input[type="submit"]{
@@ -22,4 +30,5 @@ input[type="submit"]{
     border:none;
     padding:10px 20px;
     cursor:pointer;
+    
 }
