--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,13 @@
+body{
+    display:flex;
+    align-items:end;
+     justify-content:center;
+    
+}
+
 .container{
     background-color: aqua;
-     align-items: center;
+     
 }
 
 
