--- a/about.css
+++ b/about.css
@@ -1,136 +1,69 @@
-body{
-  font-family:comic sans MS;
-}
-
-.navbar{
-   height:100px;
-   justify-content: end;
-   border:2px solid
-}
-
-
-.click{
-  border:3px solid;
-  padding:10px;
-  margin-right:10px;
-  border-radius:15px;
-  color:black;
-  
-}
-
-.click:hover{
-  background-color:red;
-}
-
-.text{
-  border:3px solid;
-  padding:10px;
-  margin-right:10px;
-  border-radius:15px;
-}
-
-p{
-  margin-top:30px;
-  background-color:firebrick;
-  border-radius:8%;
-  
-  align-items:center;
- 
-  
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  row-gap:10px;
-  column-gap: 10px;
-  width:50px;
-  border-radius:50%;
-  
-  
-}
-
-.grid-picture {
-  width:250px;
+.card {
+  background-color: #f7f7f7;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 20px;
   margin: 10px;
-  padding: 0px;
-  margin-top:30px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #333;
+  text-align: center;
+}
+
+ 
+  form {
+      width: 400px;
+      margin: 20px auto;
+    }
+    
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+    
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+    }
+    
+    button[type="submit"] {
+      background-color: #333;
+      color: #fff;
+      border:red;
+      padding: 10px 20px;
+      cursor: pointer;
+      text-align: center;
+      
   
-}
-
-.footer{
-  background-color:#24262b;
-  padding:40px 0;
-  justify-content:end;
-}
-.footer-col{
-  width:25%;
-  padding:0 15px;
-  
-
-}
-.footer-col h4{
-  font-size: 20px;
-  color:#ffffff;
- margin-bottom: 30px;
- font-weight: 500px;
- position: relative;
-
-}
-
-/* reponsive */
-@media(max-width:768px){
-  .footer-col{
-      width:50%;
-      padding:0 15px;
-      margin-bottom:30px;
-  }
-}
-@media(max-width:574px){
-  .footer-col{
-      width:50%;
-      padding:100px;
-     
-  }
-}
-
-.carousel-inner{
-  margin-bottom:20px;
-}
+    }
 
 
-@keyframes discount{
-  100%,
-  0%{
-    color:rgb(255,0,0);
-  }
-  8% {
-    color:rgb(255, 127,0);
-  }
-  16%{
-    color:rgb(255 ,255,0);
-  }
-  25%{
-    color:rgb(127,255,0)
-  }
-  33%{
-    color:rgb(0,255,186)
-  }
-  41%{
-    color:rgb(255, 0, 100)
-  }
-  50%{
-    color:rgb(0,255,255)
-  }
-  58%{
-    color:rgb(0,127,255)
-  }
-
+.card ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
-.discount{
-  animation:discount .5s infinite linear;
-  font-size:50px;
-  display:flex;
-  justify-content: center;
-  align-items: center;
+
+.card ul li {
+  margin-bottom: 10px;
+}
+
+.card {
+  background-image: linear-gradient(to bottom, #fff, #f7f7f7);
+}
+
+.card h2 {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+}
+.card ul li {
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  padding: 10px;
 }
