--- a/vacation.css
+++ b/vacation.css
@@ -1,5 +1,6 @@
 body, html {
     height: 100%;
+    
    } 
 
 /* The hero image */
@@ -38,7 +39,7 @@ body, html {
 }
 
 body{
-   font-family:sans-serif;
+    font-family:comic sans MS,sans-serif;
    line-height:1.5;
     
     
