--- a/rentals.css
+++ b/rentals.css
@@ -17,7 +17,33 @@ h5{
 }
 
 .number{
-  margin:10px;
+  display: block;
+  height: calc(1.5em + .75rem + 2px);
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.date{
+  display: block;
+  height: calc(1.5em + .75rem + 2px);
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .btn{
   margin:10px;
@@ -26,7 +52,7 @@ h5{
 
 
 .best{
-    color:red;
+    color:#ea1c2c;;
     font-size: x-large;
     border-radius: 15%;
     border-color: #ea1c2c;
