--- a/contact.css
+++ b/contact.css
@@ -1,5 +1,5 @@
 .card {
-    background-color: #f7f7f7;
+    background-color:#f7f7f7;
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 20px;
@@ -30,17 +30,21 @@
         padding: 10px;
         margin-bottom: 10px;
       }
-      
-      button[type="submit"] {
-        background-color: #333;
-        color: #fff;
-        border:red;
-        padding: 10px 20px;
+
+      input[type="submit"] {
+        width: 100%;
+        padding:8px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 3px;
         cursor: pointer;
-        text-align: center;
-        
-    
-      }
+        font-size:20px;
+    }
+      
+      input[type="submit"]:hover {
+        background-color: #45a049;
+    }
   
   
   .card ul {
