--- a/home.css
+++ b/home.css
@@ -22,8 +22,18 @@ body{
   padding:10px;
   margin-right:10px;
   border-radius:15px;
-  color:black;
+  background-color:white;
+ 
   margin-inline:3px;
+}
+
+.click:hover{
+  background-color:green;
+
+}
+
+p{
+  font-size:20px;
 }
 
 .text{
@@ -54,23 +64,17 @@ body{
 }
 
 .btn-1{
-  /* width:80px;
+  width:90px;
   border:3px solid;
   padding:10px;
   margin-left:60px;
   border-radius:5px;
-  color:black; */
-  background-color: #04AA6D; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  width:90px;
-  margin-left:60px;
-  border-radius:20px;
+  color:black;
+
+}
+
+.btn-1:hover{
+  background-color:green;
 }
 
 
