--- a/contact.css
+++ b/contact.css
@@ -1,10 +1,12 @@
 .card {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color:#f7f7f7;
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 20px;
     margin: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
   }
   
   .card h2 {
@@ -34,16 +36,17 @@
       input[type="submit"] {
         width: 100%;
         padding:8px;
-        background-color: #4CAF50;
+        background-color: #333;
         color: white;
         border: none;
         border-radius: 3px;
         cursor: pointer;
         font-size:20px;
+        margin-left: 10px;
     }
       
       input[type="submit"]:hover {
-        background-color: #45a049;
+        background-color:	#90EE90;
     }
   
   
