--- a/vacation.css
+++ b/vacation.css
@@ -23,10 +23,11 @@ body, html {
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 10%;
+  top: 7%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+ 
 }
  #expandme :hover{
     color:#ea1c2c;
@@ -39,7 +40,7 @@ body, html {
 }
 
 body{
-    font-family:comic sans MS,sans-serif;
+    font-family:sans-serif;
    line-height:1.5;
     
     
@@ -88,7 +89,7 @@ nav{
 }
 .container{
     max-width:1170px;
-    background-color: red;
+    background-color:lightblue;
     margin:auto;
 }
 
@@ -108,6 +109,7 @@ ul{
 .footer-col{
     width:25%;
     padding:0 15px;
+    margin-top:30px;
     
 
 }
