--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body{
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family:Helvetica;
 }
 
 .navbar{
@@ -183,3 +183,4 @@ h3{
      
   }
 }
+
