--- a/rentals.css
+++ b/rentals.css
@@ -70,6 +70,7 @@ h5{
   color:#ffffff;
   font-size:1.125rem;
   line-height:2;
+  margin-top:20px;
   
 }
 
@@ -77,5 +78,6 @@ h5{
     color:#ea1c2c;
     font-weight:100;
     font-size:2.5rem;
+   
   }
 
