--- a/home.css
+++ b/home.css
@@ -64,9 +64,9 @@ p{
 }
 
 .btn-1{
-  width:90px;
+  
   border:3px solid;
-  padding:10px;
+  padding:10px 24px;
   margin-left:60px;
   border-radius:5px;
   color:black;
@@ -184,3 +184,7 @@ h3{
   }
 }
 
+p{
+  background-color: #24262b;
+  color: white;
+}
