--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,8 @@
+body{
+  background-color:#e4decd;
+}
+
+
 .card {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color:#f7f7f7;
@@ -6,6 +11,7 @@
     padding: 20px;
     margin: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    
 
   }
   
