--- a/home.css
+++ b/home.css
@@ -1,5 +1,6 @@
 body{
   font-family:Helvetica;
+  background-color:#a0d2eb;
 }
 
 .navbar{
@@ -64,17 +65,21 @@ p{
 }
 
 .btn-1{
-  
   border:3px solid;
-  padding:10px 24px;
+  padding:10px 10px;
   margin-left:60px;
-  border-radius:5px;
+  border-radius:20px;
   color:black;
+  font-size:20px;
+ 
 
 }
 
 .btn-1:hover{
-  background-color:green;
+  background-color:aquamarine;
+  box-shadow: 0 5px #ffffff;
+  transform: translateY(10px);
+  
 }
 
 
@@ -157,10 +162,17 @@ ul{
 
 .BN-1{
   border:3px solid #24262b;
-  border-radius:10px;
+  border-radius:15px;
   width:150px;
   background-color:#24262b;
   color:white;
+  font-size:20px;
+}
+
+.BN-1:hover{
+  background-color: aqua;
+  transform: translateY(4px);
+  box-shadow: 0 5px #ffffff;
 }
 
 h3{
@@ -185,6 +197,6 @@ h3{
 }
 
 p{
-  background-color: #24262b;
+  font-size:25px;
   color: white;
 }
