--- a/rentals.css
+++ b/rentals.css
@@ -80,4 +80,70 @@ h5{
     font-size:2.5rem;
    
   }
-
+/* 
+  .container{
+    max-width:1170px;
+    /* background-color: red; */
+    /* margin:auto; */
+  /* } */ 
+  
+  
+  .row{
+    display:flex;
+    flex-wrap:wrap;
+  }
+  ul{
+    list-style:none;
+  }
+  .footer{
+    background-color:firebrick;
+    padding:40px 0;
+    justify-content:end;
+  }
+  .footer-col{
+    width:25%;
+    padding:0 15px;
+    
+  
+  }
+  .footer-col h4{
+    font-size: 20px;
+    color:#ffffff;
+   margin-bottom: 30px;
+   font-weight: 500px;
+   position: relative;
+   margin-left:40px;
+   
+  
+  }
+  
+  .social-links{
+    margin-left:50px;
+  
+  }
+  
+  /* .BN-1{
+    border:3px solid #24262b;
+    border-radius:10px;
+    width:150px;
+    background-color:#24262b;
+    color:white;
+  }
+   */
+ 
+  
+  /* reponsive */
+  @media(max-width:768px){
+    .footer-col{
+        width:50%;
+        padding:0 15px;
+        margin-bottom:30px;
+    }
+  }
+  @media(max-width:574px){
+    .footer-col{
+        width:50%;
+        padding:100px;
+       
+    }
+  }
