--- a/contact.css
+++ b/contact.css
@@ -2,6 +2,10 @@ body{
   background-image:url(https://images.unsplash.com/photo-1505843513577-22bb7d21e455?q=80&w=2232&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   background-repeat:no-repeat;
   position:static;
+  width:1500px;
+  display: flex;
+  justify-content: center;
+  opacity:rgba(255,255,255,0.5);
 }
 
 
@@ -13,6 +17,9 @@ body{
     padding: 20px;
     margin: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width:500px;
+    
+   
     
 
   }
@@ -54,7 +61,7 @@ body{
     }
       
       input[type="submit"]:hover {
-        background-color:	#ADD8E6;
+        background-color:#107361;
     }
   
   
