--- a/rentals.css
+++ b/rentals.css
@@ -1,10 +1,10 @@
 body{
-  background-color: #000000;
+  background-color:#10403B;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .navbar{
-  background-color: #042326;
+  background-color: #107361;;
   height:90px;
   /* padding:30px;
   margin:30px; */
@@ -28,7 +28,7 @@ h5{
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
-  border-radius: .25rem;
+  border-radius: 25rem;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
@@ -43,26 +43,31 @@ h5{
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
-  border-radius: .25rem;
+  border-radius:25px;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .btn{
   margin:10px;
-  background-color:#042326;
+  background-color:#107361;
+  border-radius:25px;
+}
+
+.form-control{
+  border-radius:25px;
 }
 
 
 .best{
-    color:#107361;
+    color:;
     font-size: x-large;
-    border-radius: 40%;
-    border-color:green;
+    border-radius:25px;
+   
 }
 
 .best:hover{
   font-size: 24px;
   text-align: center;
-  background-color:#000000;
+  background-color:#107361;
   box-shadow: 0 5px #ffffff;
   transform: translateY(4px);
 }
@@ -76,17 +81,21 @@ h5{
 }
 
 .bash h2{
-    color:#107361;
+    color:#BDE038;
     font-weight:100;
     font-size:2.5rem;
+    margin:0 20px;
    
   }
-/* 
-  .container{
+
+
+
+  
+  /* .container{
     max-width:1170px;
     /* background-color: red; */
     /* margin:auto; */
-  /* } */ 
+  /* } */  */
   
   
   .row{
@@ -116,16 +125,15 @@ h5{
    position: relative;
    margin-left:40px;
    
+   
   
   }
   
   .social-links i{
-   margin-left:13px;
-
-    
-  
-    
+  padding:10px
   }
+
+ 
   
   /* .BN-1{
     border:3px solid #24262b;
