--- a/rentals.css
+++ b/rentals.css
@@ -14,7 +14,8 @@ body{
 
 h5{
   margin:5px;
-  color: #fff;
+  color:#fff;
+
 }
 
 .number{
@@ -48,8 +49,9 @@ h5{
 }
 .btn{
   margin:10px;
-  background-color:#107361;
+  background-color:#BDE038;
   border-radius:25px;
+  
 }
 
 .form-control{
@@ -58,18 +60,19 @@ h5{
 
 
 .best{
-    color:;
     font-size: x-large;
     border-radius:25px;
+    /* background-color: #BDE038; */
+   
    
 }
 
 .best:hover{
   font-size: 24px;
   text-align: center;
-  background-color:#107361;
-  box-shadow: 0 5px #ffffff;
-  transform: translateY(4px);
+  background-color:#107361;;
+  /* box-shadow: 0 5px #ffffff; */
+  /* transform: translateY(4px); */
 }
 
 .bash p{
@@ -91,11 +94,11 @@ h5{
 
 
   
-  /* .container{
+  .container{
     max-width:1170px;
     /* background-color: red; */
-    /* margin:auto; */
-  /* } */  */
+    margin:auto;
+  }
   
   
   .row{
@@ -106,17 +109,19 @@ h5{
     list-style:none;
   }
   .footer{
-    background-color:#042326;
+    background-color:#107361;
     padding:40px 0;
     justify-content:end;
   }
-  .footer-col{
+  .footer-col {
     width:25%;
     padding:0 15px;
-   
-    
+    }
   
-  }
+    .footer-col a{
+      color:#BDE038;
+    }
+  
   .footer-col h4{
     font-size: 20px;
     color:#ffffff;
@@ -125,25 +130,38 @@ h5{
    position: relative;
    margin-left:40px;
    
-   
   
+  }
+  
+  .social-links{
+    margin-left:50px;
+    
   }
   
   .social-links i{
-  padding:10px
+    color:#BDE038;
+    margin-inline:4px;
   }
-
- 
   
-  /* .BN-1{
-    border:3px solid #24262b;
-    border-radius:50%;
+  .BN-1{
+    border:1px solid #24262b;
+    border-radius:15px;
     width:150px;
-    background-color:#24262b;
-    color:white;
-  } */
-   
- 
+    background-color:white;
+    color:black;
+    font-size:20px;
+  }
+  
+  .BN-1:hover{
+    background-color:#107361;
+    transform: translateY(4px);
+    box-shadow: 0 5px #ffffff;
+  }
+  
+  h3{
+    font-size:50px;
+    font-weight: 30px;
+  }
   
   /* reponsive */
   @media(max-width:768px){
@@ -159,4 +177,9 @@ h5{
         padding:100px;
        
     }
+  }
+  
+  p{
+    font-size:25px;
+    color: white;
   }
