--- a/rentals.css
+++ b/rentals.css
@@ -49,7 +49,7 @@ h5{
 }
 .btn{
   margin:10px;
-  background-color:#BDE038;
+  background-color:#ffffff;
   border-radius:25px;
   
 }
@@ -70,7 +70,7 @@ h5{
 .best:hover{
   font-size: 24px;
   text-align: center;
-  background-color:#107361;;
+  background-color:#107361;
   /* box-shadow: 0 5px #ffffff; */
   /* transform: translateY(4px); */
 }
@@ -108,6 +108,12 @@ h5{
   ul{
     list-style:none;
   }
+
+  .gradient{
+    background: linear-gradient(90deg, rgba(23,255,139,1) 0%, rgba(134,251,251,1) 100%);
+    height:3px;
+}
+
   .footer{
     background-color:#107361;
     padding:40px 0;
