--- a/contact.css
+++ b/contact.css
@@ -6,7 +6,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background: linear-gradient(90deg, rgba(23,255,139,1) 0%, rgba(134,251,251,1) 100%);
+  /* background: linear-gradient(90deg, rgba(23,255,139,1) 0%, rgba(134,251,251,1) 100%); */
 }
 
 .contact-form {
@@ -18,10 +18,11 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
+.contact {
   text-align: center;
   margin-bottom: 20px;
-  color: #333;
+  color: #0d314b;
+  font-size:30px;
 }
 
 form input,
@@ -31,6 +32,11 @@ form textarea {
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+
+#message{
+  width:100%;
+  height:130px
 }
 
 form button {
@@ -51,6 +57,8 @@ form button:hover {
 footer{
   text-align:center;
   padding:4rem 0;
+  background-color:#0d314b;
+
   }
 footer ul{
   list-style:none;
@@ -69,12 +77,13 @@ body{
 }
 
 h2{
-  color:white;
-  font-family:mono
+  color:#ffff;
+  font-family:mono;
+  font-size:30px;
 }
 
 a [class*="fa-"]{
-  font-size:150%;
+  font-size:200%;
   color:#BDE038;
 }
 
@@ -93,6 +102,12 @@ a [class*="fa-"]{
 }
 
 p{
-  color:var(--white);
-  font-size:1rem;
+  color:white;
+  font-size:1.1rem;
+}
+
+.gradient{
+  background: linear-gradient(90deg, rgba(23,255,139,1) 0%, rgba(134,251,251,1) 100%);
+  height:3px;
+  
 }
